Fixed: camera css was broken in prior css commit

--- a/assets/css/skyhook.css
+++ b/assets/css/skyhook.css
@@ -459,14 +459,11 @@ textarea {
   padding-right: 15vh;
 }
 #qr-scanner canvas#qr-canvas {
-  position: absolute;
-  left: 110%;
-  top: 110%;
-}
-#qr-scanner video {
   background-color: #000;
   display: block;
   margin: 0 auto;
+  width: 100%;
+  height: 100%;
   -webkit-transform: scaleX(-1);
   -moz-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
